# GEPEngine

./: CMakeLists.txt  Doxyfile  Doxyfile.bak  DoxygenTitlePage.md  Engine UML.dia  GEPEngine.dia  README.md  gitlog.txt
Resources/Objects/: Battery.mtl  maze.mtl
Resources/Shaders/: GUI - Copy.txt  GUI.txt  Light.txt  ObjShader.txt  Simple.txt  TextureShader.txt  simple.frag
Resources/Unity Rips/: maze.blend  maze.blend1
Shaders/: simple.vert
doc/: Diagram1.dia  Engine UML 1.dia  report.docx  ~$report.docx
src/GEPEngine/: BoxCollider.cpp  BoxCollider.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Components.cpp  Components.h  Core.cpp  Core.h  Exception.cpp  Exception.h  Font.cpp  Font.h  FragmentShader.txt  GEPengine.h  GUI.cpp  GUI.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  MaterialAttribute.cpp  MaterialAttribute.h  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  NonCopyable.cpp  NonCopyable.h  Object.cpp  Object.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  (+22 more)
src/Sandbox/: Menu.cpp  Menu.h  Movement.cpp  Movement.h  Planets.cpp  Planets.h  Player.cpp  Player.h  TestScene.cpp  TestScene.h  TriangleRenderer.cpp  TriangleRenderer.h  main.cpp
src/rend/: Context.cpp  Context.h  Font.cpp  Font.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.h  TextureAdapter.h  mathutil.h  rend.h
win32/: GEPEngine.lib  rend.lib
win32/Resources/Shaders/: GUI.txt  Light.txt  Texture.txt
